* Fixed processing thread / child process accounting in the "Stop" dialog (#1705)
* Fixed crash in clearstar command wiht Dynamic PSF window open when called from python (#1821)
* Fixed drizzle registration when compression is on (#1800)
* Fixed computing storage space after seqpplyreg to better account for max framing (#1802)

**Improvements**
* Support arbitrary script categories in the GtkTreeView in script preferences
* Make ONNXHelper slightly more robust (!940)
* Enabled compiler optimizations by inlining many common data conversion functions (!942)
* Use descreening instead of subtraction to generate starnet starmask, for better integration with recomposition tool (!941)
* Added prefix arg to SirilInterface.set_seq_frame_pixeldata() to make it easier to create new sequences
* SirilInterface.get_siril_selection() now works if an image or sequence is loaded, not only an image

siril 1.4.0-beta4
09/28/25

**Fixes:**
* Fixed incomplete implementation of shared memory bugfix from beta3 (#1719)
* Fixed type hinting in get_seq_frame_header to work with python 3.11 and earlier (scripts #13)
* Fixed a deadlock in the `reloadscripts` command
* Fixed crash with openCV >= 4.12 (#1722, #1723)
* Fixed issue where cold and hot pixels estimation were neve updated (#1724)
* Fixed issue with the way python retrieves the current filename (this could omit the extension in some situations)
* Fixed problems extracting metadata from FITSEQ sequences (#1718, #1720, !915)
* Fixed an issue where an incorrect colourspace transform could be applied when saving a32-bit TIFF (#1730)
* Fixed handling of automatic scripts git repository update flag
* Fixed crash in commands seqpsf and seqtilt when executed from the command line (#1736)
* Fixed crash/memory allocation for stack min or max with 16b images (#1746)
* Fixed magnitude calculation in Dynamic PSF, this affects mostly faint stars for images in 32b (#1739)