@@ -16,6 +16,7 @@ XX/XX/XX
 * Fixed crash in clearstar command wiht Dynamic PSF window open when called from python (#1821)
 * Fixed drizzle registration when compression is on (#1800)
 * Fixed computing storage space after seqpplyreg to better account for max framing (#1802)
+* Fixed OIII extraction by changing the normalisation strategy between B and G pixels (#1805)
 
 **Improvements**
 * Support arbitrary script categories in the GtkTreeView in script preferences
